1.5.5 (14.11.2016):

* Work around bug in imagemagick causing the image depth not to be respected.
  Closes bug #231 (Saving PDF corrupts 1-bpp images imported from a PDF)
  Thanks to Petr Písař for the patch.
* Fix deleting pages by selecting thumbnails and hitting delete key.


1.5.4 (14.10.2016):

* Fixed cycle SANE handle error when using frontend other than libsane-perl.
* Fixed bug preventing # pages = all by default, even with ADF.
  Closes Debian bug #840534 (#Pages scan option always defaults to '1')


1.5.3 (12.10.2016):

* Added scroll bars to all tabs on scan dialog.
  Closes bug #228 (missing scan+close button on scanning window)
* Fixed bug copy-pasting pages where subsequent operations on new pages are
  carried out on old pages.
* Changed default compression for lineart PDFs to PNG.
* Fixed cycle SANE handle option to reset options after reloading.
* Fixed Perl warnings if backend offers no "source" scan option.
* Update to Catalan translation (thanks to Davidmp)
* Update to Slovak translation (thanks to Dušan Kazik)


1.5.2 (24.08.2016):

* Fixed bug prepending or appending to a PDF with a space in the path.
* Refactored code handling geometry options to reduce complexity and duplication
* Removed metadata variables %h, %i, %s, adding %H, %I, %S.
  Closes bug #226 (Formatting timestamp for filename template broken)
* Encode document date in ASCII to workaround a bug in PDF::API2 where UTF-8
  encoding caused garbage in the metadata.
  Closes bug #224 (CreationDate and ModDate fields are missing)
* If the output from user-defined tool is pnm, there is no way to tell the
  resolution, so assume that it is the same as the input.
  Closes bug #227 (Page size corruption in 1.5.1)
* Support hand-scanner option in test backend. Closes bug #223
  ("Auto length detection" option does not work with ScanSnap IX500)
* Filter out double memory address from unpaper warning.
  Closes Debian bug #833521 (unpaper AVStream codec deprecation warning)