@@ -1,7 +1,7 @@
 use warnings;
 use strict;
 use File::Basename;    # Split filename into dir, file, ext
-use Test::More tests => 5;
+use Test::More tests => 6;
 use Glib qw(TRUE FALSE);    # To get TRUE and FALSE
 use Gscan2pdf::Document;
 
@@ -18,7 +18,6 @@ Gscan2pdf::Document->setup($logger);
 
 # Create test image
 system('convert rose: test.tif');
-my $old = `identify -format '%m %G %g %z-bit %r' test.tif`;
 
 my $slist = Gscan2pdf::Document->new;
 
@@ -30,7 +29,7 @@ $slist->import_files(
     paths             => ['test.tif'],
     finished_callback => sub {
         my $clipboard = $slist->copy_selection(TRUE);
-        $slist->paste_selection( $clipboard, '0', 'after' )
+        $slist->paste_selection( $clipboard, '0', 'after', TRUE )
           ;    # copy-paste page 1->2
         isnt(
             "$slist->{data}[0][2]{filename}",
@@ -45,6 +44,14 @@ $slist->import_files(
 
         $clipboard = $slist->cut_selection;
         is( $#{$clipboard}, 0, 'cut 1 page to clipboard' );
+
+        $slist->paste_selection( $clipboard, '0', 'before' )
+          ;    # paste page before 1
+        is(
+            "$slist->{data}[0][2]{uuid}",
+            $clipboard->[0][2]{uuid},
+            'cut page pasted at page 1'
+        );
         Gtk2->main_quit;
     }
 );
