@@ -4,6 +4,8 @@
   Closes bug #231 (Saving PDF corrupts 1-bpp images imported from a PDF)
   Thanks to Petr Písař for the patch.
 * Fix deleting pages by selecting thumbnails and hitting delete key.
+* Fixed drag-and-drop operations broken in v1.5.2.
+  Closes bug #232 (Unable to reorder pages in the thumbview)
 
 
 1.5.4 (14.10.2016):
